languages/montiarc-fe/src/test/resources/contextconditions/invalid/VariableMoreThanOnceConflict.arc
package invalid;

component VariableMoreThanOnceConflict{

	var Integer a;
	var Double a;

	automaton VariableMoreThanOnceConflict {

		state S;
		initial S;
	}
}